# piko

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  bunfig.toml  clippy.toml  generate_icon.py  hostd-gap-analysis.md  package-lock.json  package.json  review-audit.md  tsconfig.base.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
docs/: README.md  actor-protocol-scopes-design.md  agent-architecture.md  agent-identity.md  agent-prompt-assembly-design.md  agent-run-atomicity-design.md  agent-runtime-api-design.md  antigravity-integration-and-reconciliation.md  async-flow-channel-consolidation-design.md  bun-opentui-tui-remodel-plan.md  client-core-contract-baseline.md  client-core-design.md  debugging-hangs.md  dispatcher-framework.md  engine-abstraction.md  engine-responsibility-distribution-plan.md  feature-parity.md  gui-app-identity-quit-feature.md  gui-chrome-presentation-design.md  gui-chrome-presentation-feature.md  gui-chrome-tool-window-layout-design.md  gui-code-organization-design.md  gui-command-palette-feature.md  gui-design.md  gui-implementation-plan.md  gui-overlay-stack-design.md  gui-overlay-stack-feature.md  gui-primary-surface-design.md  gui-workbench-feature.md  gui-worktree-ownership.md  host-command-catalog-design.md  host-tui-docs-subsystem-gap-analysis.md  host-tui-editor-autocomplete-unification.md  host-tui-runtime-boundary-redesign.md  host-tui-surface-panel-redesign.md  host-tui-ux-runtime-migration.md  hostd-migration-status.md  hostd-observation-projection.md  hostd-tui-interaction.md  hostd-turn-model.md  (+33 more)
(+20 files in other folders)
