[workspace]
members = [
  "packages/hostd", "packages/llmd",
  "packages/orchd", "packages/orchd-api", "packages/protocol", "packages/comms",
  "packages/sandbox", "packages/tui",
  "packages/client-core", "packages/gui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
